force-app/main/default/objects/reporteT24__c/reporteT24__c.object-meta.xml
<CustomObject>
    <label>reporteT24</label>
    <nameField>
        <label>Nombre de reporteT24</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>reporT24s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>