force-app/main/default/objects/reporteT24__c/fields/Apellido1Benf1__c.field-meta.xml
<CustomField>
    <fullName>Apellido1Benf1__c</fullName>
    <description>Se guarda solo el primer apellido del primer beneficiario y es un campo obligatorio</description>
    <inlineHelpText>Se escribe  solo el primer apellido del primer beneficiario y es un campo obligatorio</inlineHelpText>
    <label>Apellido1Benf1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>