force-app/main/default/objects/reporteT24__c/fields/Apellido1Benf2__c.field-meta.xml
<CustomField>
    <fullName>Apellido1Benf2__c</fullName>
    <description>Se escribe solo el primer apellido del segundo beneficiario y es un campo obligatorio.</description>
    <inlineHelpText>Se escribe solo el primer apellido o  mejor conocido  como   apellido  paterno es un campo obligatorio.</inlineHelpText>
    <label>Apellido1Benf2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>