force-app/main/default/objects/reporteT24__c/fields/Apellido1Benf3__c.field-meta.xml
<CustomField>
    <fullName>Apellido1Benf3__c</fullName>
    <description>Se guarda el primer apellido  del tercer beneficiario y es un campo obligatorio</description>
    <inlineHelpText>Se ingresa solo el primer apellido del tercer beneficiario y es obligatorio.</inlineHelpText>
    <label>Apellido1Benf3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>