force-app/main/default/objects/reporteT24__c/fields/Apellido1Ref1__c.field-meta.xml
<CustomField>
    <fullName>Apellido1Ref1__c</fullName>
    <description>Se guarda el primer apellido de la primera referencia del empleado</description>
    <inlineHelpText>Se guardara solo el  primer apellido del primer referido y este campo es obligatorio.</inlineHelpText>
    <label>Apellido1Ref1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>