force-app/main/default/objects/reporteT24__c/fields/Apellido1Ref2__c.field-meta.xml
<CustomField>
    <fullName>Apellido1Ref2__c</fullName>
    <description>Se guarda el primer apellido del segundo  referido y es obligatorio este campo</description>
    <inlineHelpText>Se guarda el primer apellido y es obligatorio</inlineHelpText>
    <label>Apellido1Ref2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>