force-app/main/default/objects/reporteT24__c/fields/Apellido2Ref1__c.field-meta.xml
<CustomField>
    <fullName>Apellido2Ref1__c</fullName>
    <description>Se guarda el segundo apellido</description>
    <inlineHelpText>Se guarda el segundo apellido siempre y cuando tenga la referencia, este campo no es obligatorio.</inlineHelpText>
    <label>Apellido2Ref1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>