force-app/main/default/objects/reporteT24__c/fields/aplicaSeg__c.field-meta.xml
<CustomField>
    <fullName>aplicaSeg__c</fullName>
    <description>Se guarda si el empleado aplica a seguro</description>
    <inlineHelpText>Se ingresa s si aplica a seguro y  n sino aplica</inlineHelpText>
    <label>aplicaSeg</label>
    <length>1</length>
    <type>Text</type>
</CustomField>