force-app/main/default/objects/reporteT24__c/fields/cargoEmpleado__c.field-meta.xml
<CustomField>
    <fullName>cargoEmpleado__c</fullName>
    <description>Se guarda el  cargo del empleado en la empresa</description>
    <inlineHelpText>Se escribe el cargo que desempeña el  empleado en la empresa.</inlineHelpText>
    <label>cargoEmpleado</label>
    <length>70</length>
    <type>Text</type>
</CustomField>