force-app/main/default/objects/reporteT24__c/fields/cod__c.field-meta.xml
<CustomField>
    <fullName>cod__c</fullName>
    <description>Se guardara el código de la provincia que procede el empleado</description>
    <inlineHelpText>Se escribe solo la provincia de procedencia del empleado</inlineHelpText>
    <label>codProvincia</label>
    <length>30</length>
    <type>Text</type>
</CustomField>