force-app/main/default/objects/reporteT24__c/fields/codC__c.field-meta.xml
<CustomField>
    <fullName>codC__c</fullName>
    <description>Se guarda el código de la  ciudad de origen del empleado</description>
    <inlineHelpText>se escribe solo el código de la ciudad.</inlineHelpText>
    <label>codCiudad</label>
    <length>10</length>
    <type>Text</type>
</CustomField>