force-app/main/default/objects/reporteT24__c/fields/codPais__c.field-meta.xml
<CustomField>
    <fullName>codPais__c</fullName>
    <description>Este campo guarda el código del país de origen del empleado</description>
    <inlineHelpText>Se escribe el código de país del empleado</inlineHelpText>
    <label>codPais</label>
    <length>10</length>
    <type>Text</type>
</CustomField>