force-app/main/default/objects/reporteT24__c/fields/codR__c.field-meta.xml
<CustomField>
    <fullName>codR__c</fullName>
    <description>Guardara el código de la región de origen del empleado</description>
    <inlineHelpText>Se escribe solo el código de la región de donde es origen el empleado</inlineHelpText>
    <label>codRegion</label>
    <length>10</length>
    <type>Text</type>
</CustomField>