force-app/main/default/objects/reporteT24__c/fields/codSector__c.field-meta.xml
<CustomField>
    <fullName>codSector__c</fullName>
    <description>El campo guardara el código del sector de origen del sector originario del empleado</description>
    <inlineHelpText>Se escribe solo el código del sector originario del empleado.</inlineHelpText>
    <label>codSector</label>
    <length>10</length>
    <type>Text</type>
</CustomField>