force-app/main/default/objects/reporteT24__c/fields/correoEmplead__c.field-meta.xml
<CustomField>
    <fullName>correoEmplead__c</fullName>
    <description>Guarda el correo del empleado</description>
    <inlineHelpText>correo formato kjnkn@yahoo.com</inlineHelpText>
    <label>correoEmplead</label>
    <length>40</length>
    <type>Text</type>
</CustomField>