force-app/main/default/objects/reporteT24__c/fields/correoEmpresa__c.field-meta.xml
<CustomField>
    <fullName>correoEmpresa__c</fullName>
    <description>Se guarda el correo de la empresa</description>
    <inlineHelpText>Correo de la empresa</inlineHelpText>
    <label>correoEmpresa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>