force-app/main/default/objects/reporteT24__c/fields/cuenta__c.field-meta.xml
<CustomField>
    <fullName>cuenta__c</fullName>
    <description>guarda la cuenta en la cual se deducirá el cobro correspondiente del  pago del empleado</description>
    <inlineHelpText>Se escribe la cuenta corespondiente</inlineHelpText>
    <label>cuentaPago</label>
    <length>15</length>
    <type>Text</type>
</CustomField>