force-app/main/default/objects/reporteT24__c/fields/direccion__c.field-meta.xml
<CustomField>
    <fullName>direccion__c</fullName>
    <description>Se guardara la dirección exacta de la vivienda del empleado.</description>
    <inlineHelpText>Dirección del domicilio del empleado.</inlineHelpText>
    <label>direccion</label>
    <length>180</length>
    <type>Text</type>
</CustomField>