force-app/main/default/objects/reporteT24__c/fields/direccionEmpresa__c.field-meta.xml
<CustomField>
    <fullName>direccionEmpresa__c</fullName>
    <description>Se guarda la dirección de la empresa</description>
    <inlineHelpText>Dirección exacta de la empresa</inlineHelpText>
    <label>direccionEmpresa</label>
    <length>110</length>
    <type>Text</type>
</CustomField>