force-app/main/default/objects/reporteT24__c/fields/entePaga__c.field-meta.xml
<CustomField>
    <fullName>entePaga__c</fullName>
    <description>Se guarda el nombre de la entidad donde esta la cuenta que se deducira</description>
    <inlineHelpText>Es la entidad al cual pertenece la cuenta donde se deducirá el cobro del pago de la cuota</inlineHelpText>
    <label>entePaga</label>
    <length>20</length>
    <type>Text</type>
</CustomField>