force-app/main/default/objects/reporteT24__c/fields/envio__c.field-meta.xml
<CustomField>
    <fullName>envio__c</fullName>
    <description>Aquí se guarda el código de envió</description>
    <inlineHelpText>se guarda O si no E</inlineHelpText>
    <label>envio</label>
    <length>1</length>
    <type>Text</type>
</CustomField>