force-app/main/default/objects/reporteT24__c/fields/estadoCivil__c.field-meta.xml
<CustomField>
    <fullName>estadoCivil__c</fullName>
    <description>Se guarda la  letra representativa del estado  civil del empleado.</description>
    <inlineHelpText>Se escribe solo u, s, d y c.</inlineHelpText>
    <label>estadoCivil</label>
    <length>1</length>
    <type>Text</type>
</CustomField>