force-app/main/default/objects/reporteT24__c/fields/extension__c.field-meta.xml
<CustomField>
    <fullName>extension__c</fullName>
    <description>Se guarda la extensión dentro de la empresa del empleado</description>
    <inlineHelpText>Extensión de la empleado en la empresa</inlineHelpText>
    <label>extension</label>
    <length>6</length>
    <type>Text</type>
</CustomField>