force-app/main/default/objects/reporteT24__c/fields/fax__c.field-meta.xml
<CustomField>
    <fullName>fax__c</fullName>
    <description>Este campo guarda el fax de la empresa</description>
    <inlineHelpText>Fax de la empresa</inlineHelpText>
    <label>fax</label>
    <length>10</length>
    <type>Text</type>
</CustomField>