force-app/main/default/objects/reporteT24__c/fields/fechaIngresoCuentas__c.field-meta.xml
<CustomField>
    <fullName>fechaIngresoCuentas__c</fullName>
    <description>Este objeto guarda la fecha que se crea la cuenta para el aporte de empleado.</description>
    <inlineHelpText>Esta fecha es calendario del ingreso a cuenta.</inlineHelpText>
    <label>fechaIngresoCuent</label>
    <type>Date</type>
</CustomField>