force-app/main/default/objects/reporteT24__c/fields/fechaIngresoEmpresa__c.field-meta.xml
<CustomField>
    <fullName>fechaIngresoEmpresa__c</fullName>
    <description>Guarda la fecha que el empleado  ingreso a la empresa</description>
    <inlineHelpText>Fecha que el empleado  ingreso a la empresa</inlineHelpText>
    <label>fechaIngresoEmpresa</label>
    <type>Date</type>
</CustomField>