force-app/main/default/objects/reporteT24__c/fields/fechaNacimientoEmpleado__c.field-meta.xml
<CustomField>
    <fullName>fechaNacimientoEmpleado__c</fullName>
    <description>Se guarda la fecha que nació el empleado</description>
    <inlineHelpText>es un formato fecha y  es cuando nació el empleado.</inlineHelpText>
    <label>fechaNacimientoEmpleado</label>
    <type>Date</type>
</CustomField>