force-app/main/default/objects/reporteT24__c/fields/formaPago__c.field-meta.xml
<CustomField>
    <fullName>formaPago__c</fullName>
    <description>Se guarda la forma que se pagan las coutas</description>
    <inlineHelpText>Se ingresa el código correspondiente a la forma en el cual se pagara la cuota</inlineHelpText>
    <label>formaPago</label>
    <length>3</length>
    <type>Text</type>
</CustomField>