force-app/main/default/objects/reporteT24__c/fields/identificacion__c.field-meta.xml
<CustomField>
    <fullName>identificacion__c</fullName>
    <description>Se guardara la identificación elegido en tipo identificación(identidad, carnet de residente,pasaporte y rtn)</description>
    <inlineHelpText>Ingresar la identificación.</inlineHelpText>
    <label>identificacion</label>
    <length>20</length>
    <type>Text</type>
</CustomField>