force-app/main/default/objects/reporteT24__c/fields/ingresoBrutoCalculado__c.field-meta.xml
<CustomField>
    <fullName>ingresoBrutoCalculado__c</fullName>
    <description>Este campo guarda el ingreso bruto calculado del empleado al mes</description>
    <inlineHelpText>Es el ingreso bruto calculado del empleado al mes</inlineHelpText>
    <label>ingresoBrutoCalculado</label>
    <length>15</length>
    <type>Text</type>
</CustomField>