force-app/main/default/objects/reporteT24__c/fields/lugarNacimiento__c.field-meta.xml
<CustomField>
    <fullName>lugarNacimiento__c</fullName>
    <description>Se guarda el  lugar donde nació el empleado</description>
    <inlineHelpText>Se escribe el lugar de nacimiento del empleado</inlineHelpText>
    <label>lugarNacimiento</label>
    <length>30</length>
    <type>Text</type>
</CustomField>