force-app/main/default/objects/reporteT24__c/fields/monto__c.field-meta.xml
<CustomField>
    <fullName>monto__c</fullName>
    <description>Se guarda el monto que paga el cliente</description>
    <inlineHelpText>se ingresa el monto</inlineHelpText>
    <label>monto</label>
    <length>15</length>
    <type>Text</type>
</CustomField>