force-app/main/default/objects/reporteT24__c/fields/montoAporte__c.field-meta.xml
<CustomField>
    <fullName>montoAporte__c</fullName>
    <label>montoAporte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>