force-app/main/default/objects/reporteT24__c/fields/montoAporteP__c.field-meta.xml
<CustomField>
    <fullName>montoAporteP__c</fullName>
    <label>montoAporteP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>