force-app/main/default/objects/reporteT24__c/fields/montoNeto__c.field-meta.xml
<CustomField>
    <fullName>montoNeto__c</fullName>
    <description>Se guarda el monto neto que paga el cliente</description>
    <inlineHelpText>Se escribe el monto neto a pagar por el cliente</inlineHelpText>
    <label>montoNeto</label>
    <length>15</length>
    <type>Text</type>
</CustomField>