force-app/main/default/objects/reporteT24__c/fields/nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>nacionalidad__c</fullName>
    <description>Se guarda la nacionalidad del empleado.</description>
    <inlineHelpText>Se escribe solo la nacionalidad del empleado.</inlineHelpText>
    <label>nacionalidad</label>
    <length>20</length>
    <type>Text</type>
</CustomField>