force-app/main/default/objects/reporteT24__c/fields/noEmpleado__c.field-meta.xml
<CustomField>
    <fullName>noEmpleado__c</fullName>
    <description>Este objeto guarda los datos del código del empleado.</description>
    <inlineHelpText>numero del empleado</inlineHelpText>
    <label>noEmpleado</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>