force-app/main/default/objects/reporteT24__c/fields/noEmpresa__c.field-meta.xml
<CustomField>
    <fullName>noEmpresa__c</fullName>
    <description>Este campo guarda el numero de la empresa que inscribe al empleado.</description>
    <inlineHelpText>Código del empleador a inscribir.</inlineHelpText>
    <label>noEmpresa</label>
    <length>18</length>
    <type>Text</type>
</CustomField>