force-app/main/default/objects/reporteT24__c/fields/Nombre1Benf2__c.field-meta.xml
<CustomField>
    <fullName>Nombre1Benf2__c</fullName>
    <description>Es el primer nombre del segundo beneficiario es un campo obligatorio.</description>
    <inlineHelpText>Se escribe solamente el primer nombre de cada afiliado siendo este un campo obligatorio.</inlineHelpText>
    <label>Nombre1Benf2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>