force-app/main/default/objects/reporteT24__c/fields/Nombre1Benf3__c.field-meta.xml
<CustomField>
    <fullName>Nombre1Benf3__c</fullName>
    <description>Se guarda el primer nombre del beneficiario 3 y es obligatorio</description>
    <inlineHelpText>Se coloca solo el primer nombre del beneficiario 3 siendo este obligatorio</inlineHelpText>
    <label>Nombre1Benf3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>