force-app/main/default/objects/reporteT24__c/fields/Nombre1Benf4__c.field-meta.xml
<CustomField>
    <fullName>Nombre1Benf4__c</fullName>
    <description>Se guarda solo el primer nombre del cuarto beneficiario y es un campo obligatorio.</description>
    <inlineHelpText>Se ingresa solo el primer nombre del cuarto  beneficiario.</inlineHelpText>
    <label>Nombre1Benf4</label>
    <length>40</length>
    <type>Text</type>
</CustomField>