force-app/main/default/objects/reporteT24__c/fields/nombre2Ref1__c.field-meta.xml
<CustomField>
    <fullName>nombre2Ref1__c</fullName>
    <description>Se guarda el segundo nombre de la primera referencia del empleado.</description>
    <inlineHelpText>Se escribe solo el segundo nombre de la primera referencia del empleado siempre y cuando lo tenga, este campo no es obligatorio.</inlineHelpText>
    <label>nombre2Ref1</label>
    <length>15</length>
    <type>Text</type>
</CustomField>