force-app/main/default/objects/reporteT24__c/fields/nombre2Ref2__c.field-meta.xml
<CustomField>
    <fullName>nombre2Ref2__c</fullName>
    <description>Se guarda el segundo nombre si lo tiene del segundo referido este es opcional</description>
    <inlineHelpText>se escribe el segundo nombre siempre y cuando tenga el referido</inlineHelpText>
    <label>nombre2Ref2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>