force-app/main/default/objects/reporteT24__c/fields/nombreConyugue__c.field-meta.xml
<CustomField>
    <fullName>nombreConyugue__c</fullName>
    <description>Se guarda el nombre completo del conyugue del empleado siempre y cuando  tenga</description>
    <inlineHelpText>Nombre completo del conyugue del empleado siempre y cuando  tenga</inlineHelpText>
    <label>nombreConyugue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>