force-app/main/default/objects/reporteT24__c/fields/nombreEmpresa__c.field-meta.xml
<CustomField>
    <fullName>nombreEmpresa__c</fullName>
    <description>Guarada el nombre como se conoce la empresa</description>
    <inlineHelpText>Nombre como se conoce la empresa</inlineHelpText>
    <label>nombreEmpresa</label>
    <length>110</length>
    <type>Text</type>
</CustomField>