force-app/main/default/objects/reporteT24__c/fields/nombrePromotor__c.field-meta.xml
<CustomField>
    <fullName>nombrePromotor__c</fullName>
    <description>se guarda el nombre completo del promotor</description>
    <inlineHelpText>Se escribe el nombre completo del promotor</inlineHelpText>
    <label>nombrePromotor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>