force-app/main/default/objects/reporteT24__c/fields/NombreRef1__c.field-meta.xml
<CustomField>
    <fullName>NombreRef1__c</fullName>
    <description>Se guarda el nombre de la primera referencia del empleado</description>
    <inlineHelpText>Se ingresa solamente el primer nombre de la referencia del empleado</inlineHelpText>
    <label>NombreRef1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>