force-app/main/default/objects/reporteT24__c/fields/nroDireccion__c.field-meta.xml
<CustomField>
    <fullName>nroDireccion__c</fullName>
    <description>Se guarda el código de la dirección del empleado.</description>
    <inlineHelpText>Se ingresa el código de la dirección del empleado.</inlineHelpText>
    <label>nroDireccion</label>
    <length>5</length>
    <type>Text</type>
</CustomField>