force-app/main/default/objects/reporteT24__c/fields/nroEdificio__c.field-meta.xml
<CustomField>
    <fullName>nroEdificio__c</fullName>
    <description>Se guarda el código del edificio del empleado.</description>
    <inlineHelpText>Se ingresa el código del edificio del empleado.</inlineHelpText>
    <label>nroEdificio</label>
    <length>5</length>
    <type>Text</type>
</CustomField>