force-app/main/default/objects/reporteT24__c/fields/ocupacion__c.field-meta.xml
<CustomField>
    <fullName>ocupacion__c</fullName>
    <description>Se guarda el código de la ocupación del empleado</description>
    <inlineHelpText>Se ingresa solo el  código de la ocupacion</inlineHelpText>
    <label>ocupacion</label>
    <length>3</length>
    <type>Text</type>
</CustomField>