force-app/main/default/objects/reporteT24__c/fields/pApellidoEmpleado__c.field-meta.xml
<CustomField>
    <fullName>pApellidoEmpleado__c</fullName>
    <description>Se guarda solo el primer apellido del empleado.</description>
    <inlineHelpText>Se escribe solo el primer apellido del empleado.</inlineHelpText>
    <label>pApellidoEmpleado</label>
    <length>15</length>
    <type>Text</type>
</CustomField>