force-app/main/default/objects/reporteT24__c/fields/parentescoBenf1__c.field-meta.xml
<CustomField>
    <fullName>parentescoBenf1__c</fullName>
    <description>se guarda el parentesco del beneficiario con el  afiliado</description>
    <inlineHelpText>Parentesco del beneficiario con el afiliado</inlineHelpText>
    <label>parentescoBenf1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>