force-app/main/default/objects/reporteT24__c/fields/parentescoBenf2__c.field-meta.xml
<CustomField>
    <fullName>parentescoBenf2__c</fullName>
    <description>Se  guarda la relación de familia que tiene el segundo beneficiario con respecto al afiliado.</description>
    <inlineHelpText>Se guarda el parentesco que tiene el segundo beneficiario con el afiliado.</inlineHelpText>
    <label>parentescoBenf2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>