force-app/main/default/objects/reporteT24__c/fields/parentescoBenf3__c.field-meta.xml
<CustomField>
    <fullName>parentescoBenf3__c</fullName>
    <description>Se guarda el parentesco  del tercer beneficiario con respecto al  empleado afiliado</description>
    <inlineHelpText>se guarda solo la relación familiar del tercer beneficiario con respecto al afiliado</inlineHelpText>
    <label>parentescoBenf3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>