force-app/main/default/objects/reporteT24__c/fields/Periodo__c.field-meta.xml
<CustomField>
    <fullName>Periodo__c</fullName>
    <description>Se guarda el periodo con el cual se compromete al pago al empleado</description>
    <inlineHelpText>Se escribe las iniciales indicadas</inlineHelpText>
    <label>Periodo</label>
    <length>3</length>
    <type>Text</type>
</CustomField>