force-app/main/default/objects/reporteT24__c/fields/pNombreEmpleado__c.field-meta.xml
<CustomField>
    <fullName>pNombreEmpleado__c</fullName>
    <description>Solo se guardara el primer nombre del empleado que se a ingresado.</description>
    <inlineHelpText>Se escribe solo el primer nombre del empleado.</inlineHelpText>
    <label>pNombreEmpleado</label>
    <length>15</length>
    <type>Text</type>
</CustomField>