force-app/main/default/objects/reporteT24__c/fields/porcentajeBenf1__c.field-meta.xml
<CustomField>
    <fullName>porcentajeBenf1__c</fullName>
    <description>Se guarda cuanto corresponde al beneficiario 1</description>
    <inlineHelpText>Solo se escribe cuanto le corresponde al  beneficiario 1 del total  del seguro</inlineHelpText>
    <label>porcentajeBenf1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>