force-app/main/default/objects/reporteT24__c/fields/porcentajeBenf2__c.field-meta.xml
<CustomField>
    <fullName>porcentajeBenf2__c</fullName>
    <description>Se guarda el porcentaje que le corresponde al segundo  beneficiario del seguro</description>
    <inlineHelpText>se escribe solo lo que le corresponde al segundo beneficiario</inlineHelpText>
    <label>porcentajeBenf2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>