force-app/main/default/objects/reporteT24__c/fields/porcentajeBenf3__c.field-meta.xml
<CustomField>
    <fullName>porcentajeBenf3__c</fullName>
    <description>Se guarda el porcentaje que le corresponde al tercer beneficiario</description>
    <inlineHelpText>se ingresa el  porcentaje total que le corresponde al tercer beneficiario</inlineHelpText>
    <label>porcentajeBenf3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>