force-app/main/default/objects/reporteT24__c/fields/primerNombreBen1__c.field-meta.xml
<CustomField>
    <fullName>primerNombreBen1__c</fullName>
    <description>Se guardara solo el  primer nombre del  primer beneficiario y es obligatorio</description>
    <inlineHelpText>Se coloca solo el  primer nombre del  primer beneficiario y es obligatorio</inlineHelpText>
    <label>Nombre1Benf1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>