force-app/main/default/objects/reporteT24__c/fields/producto__c.field-meta.xml
<CustomField>
    <fullName>producto__c</fullName>
    <description>Se guarda el código del producto que se esta vinculando el cliente.</description>
    <inlineHelpText>Se guardara el determinado numero corespondiente.</inlineHelpText>
    <label>producto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>