force-app/main/default/objects/reporteT24__c/fields/promotor__c.field-meta.xml
<CustomField>
    <fullName>promotor__c</fullName>
    <description>Se guarda el código del promotor que atiende la afiliacio</description>
    <inlineHelpText>se ingresa el código del  promotor</inlineHelpText>
    <label>promotor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>