force-app/main/default/objects/reporteT24__c/fields/razonSocial__c.field-meta.xml
<CustomField>
    <fullName>razonSocial__c</fullName>
    <description>Se guarda el nombre con que esta inscrita la empresa</description>
    <inlineHelpText>Es el nombre de la empresa inscrita</inlineHelpText>
    <label>razonSocial</label>
    <length>100</length>
    <type>Text</type>
</CustomField>