force-app/main/default/objects/reporteT24__c/fields/respuesta__c.field-meta.xml
<CustomField>
    <fullName>respuesta__c</fullName>
    <description>Este campo es la respuesta de la base de datos ya sea la cuenta o el error presentado</description>
    <inlineHelpText>Visualizara la respuesta de la base de datos</inlineHelpText>
    <label>respuesta</label>
    <length>254</length>
    <type>Text</type>
</CustomField>