force-app/main/default/objects/reporteT24__c/fields/rtnEmpleado__c.field-meta.xml
<CustomField>
    <fullName>rtnEmpleado__c</fullName>
    <description>RTN del empleado</description>
    <inlineHelpText>RTN del empleado</inlineHelpText>
    <label>rtnEmpleado</label>
    <length>16</length>
    <type>Text</type>
</CustomField>