force-app/main/default/objects/reporteT24__c/fields/rtnEmpleador__c.field-meta.xml
<CustomField>
    <fullName>rtnEmpleador__c</fullName>
    <description>Se guarda el rtn del empleador</description>
    <inlineHelpText>se debe ingresar solo el rtn</inlineHelpText>
    <label>rtnEmpleador</label>
    <length>16</length>
    <type>Text</type>
</CustomField>