force-app/main/default/objects/reporteT24__c/fields/sApellidoEmpleado__c.field-meta.xml
<CustomField>
    <fullName>sApellidoEmpleado__c</fullName>
    <description>Se guarda solo el segundo apellido del empleado.</description>
    <inlineHelpText>Se debe escribir solo el segundo nombre del empleado.</inlineHelpText>
    <label>sApellidoEmpleado</label>
    <length>40</length>
    <type>Text</type>
</CustomField>