force-app/main/default/objects/reporteT24__c/fields/sexo__c.field-meta.xml
<CustomField>
    <fullName>sexo__c</fullName>
    <description>Se guarda una letra que representa un genero (f femenino, m masculino)</description>
    <inlineHelpText>se escribe solo m o f</inlineHelpText>
    <label>sexo</label>
    <length>1</length>
    <type>Text</type>
</CustomField>