force-app/main/default/objects/reporteT24__c/fields/sNombreEmpleado__c.field-meta.xml
<CustomField>
    <fullName>sNombreEmpleado__c</fullName>
    <description>Se guardara solo el segundo nombre del empleado.</description>
    <inlineHelpText>Se escribe solo el segundo nombre sel empleado.</inlineHelpText>
    <label>sNombreEmpleado</label>
    <length>40</length>
    <type>Text</type>
</CustomField>