force-app/main/default/objects/reporteT24__c/fields/subProducto__c.field-meta.xml
<CustomField>
    <fullName>subProducto__c</fullName>
    <description>Se guarda el código del  subproducto que se inscribe el empleado</description>
    <inlineHelpText>se escribe exclusivamente el código del subproducto solicitado</inlineHelpText>
    <label>subProducto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>