force-app/main/default/objects/reporteT24__c/fields/telefono__c.field-meta.xml
<CustomField>
    <fullName>telefono__c</fullName>
    <description>Se guarda el teléfono del  empleado</description>
    <inlineHelpText>se escribe solo el teléfono registrado por el empleado</inlineHelpText>
    <label>telefono</label>
    <type>Phone</type>
</CustomField>