force-app/main/default/objects/reporteT24__c/fields/telefonoEmpleado__c.field-meta.xml
<CustomField>
    <fullName>telefonoEmpleado__c</fullName>
    <description>Se guarda el numero telefónico del empleado</description>
    <inlineHelpText>Formato 2254-5643</inlineHelpText>
    <label>telefonoEmpleado</label>
    <length>12</length>
    <type>Text</type>
</CustomField>