force-app/main/default/objects/reporteT24__c/fields/telefonoEmpresa__c.field-meta.xml
<CustomField>
    <fullName>telefonoEmpresa__c</fullName>
    <description>Guarda el teléfono del empleado</description>
    <inlineHelpText>Teléfono de la empresa del empleado</inlineHelpText>
    <label>telefonoEmpresa</label>
    <length>10</length>
    <type>Text</type>
</CustomField>