force-app/main/default/objects/reporteT24__c/fields/telefonoRef1__c.field-meta.xml
<CustomField>
    <fullName>telefonoRef1__c</fullName>
    <description>Se guarda el teléfono de contacto de la primera referencia</description>
    <inlineHelpText>telefono de la primera referencia  del empleado</inlineHelpText>
    <label>telefonoRef1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>