force-app/main/default/objects/reporteT24__c/fields/telefonoRef2__c.field-meta.xml
<CustomField>
    <fullName>telefonoRef2__c</fullName>
    <description>Se guarda el teléfono de contacto de la segunda referencia del empleado</description>
    <inlineHelpText>el teléfono de contacto de la segunda referencia del empleado</inlineHelpText>
    <label>telefonoRef2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>