force-app/main/default/objects/reporteT24__c/fields/tipoAporte__c.field-meta.xml
<CustomField>
    <fullName>tipoAporte__c</fullName>
    <description>Se guarda el código del tipo de aporte que realiza el empleado</description>
    <inlineHelpText>Se ingresa el código correspondiente que tiene cada tipo de aporte</inlineHelpText>
    <label>tipoAporte</label>
    <length>3</length>
    <type>Text</type>
</CustomField>