force-app/main/default/objects/reporteT24__c/fields/TipoId__c.field-meta.xml
<CustomField>
    <fullName>TipoId__c</fullName>
    <description>Este campo guarda el código de identificación usado para la inscripción del reporte.</description>
    <inlineHelpText>Código del tipo de identificación.</inlineHelpText>
    <label>TipoId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>