force-app/main/default/objects/reporteT24__c/fields/tipoSolicitud__c.field-meta.xml
<CustomField>
    <fullName>tipoSolicitud__c</fullName>
    <description>Se guarda el código del tipo de solicitud</description>
    <inlineHelpText>Se ingresa el código del tipo de solicitud</inlineHelpText>
    <label>tipoSolicitud</label>
    <length>15</length>
    <type>Text</type>
</CustomField>