force-app/main/default/objects/reporteT24__c/fields/usuario__c.field-meta.xml
<CustomField>
    <fullName>usuario__c</fullName>
    <description>Usuario que usa el campo</description>
    <inlineHelpText>Usuario que usa el campo</inlineHelpText>
    <label>usuario</label>
    <length>40</length>
    <type>Text</type>
</CustomField>