force-app/main/default/objects/reporteT24__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>identificacion__c</columns>
    <columns>noEmpleado__c</columns>
    <columns>nombreConyugue__c</columns>
    <columns>respuesta__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>